k8s/manifests/postgres-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloak
  namespace: dvloper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-keycloak
  template:
    metadata:
      labels:
        app: postgres-keycloak
    spec:
      containers:
        - name: postgres-keycloak
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-keycloak-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-keycloak-data
          persistentVolumeClaim:
            claimName: postgres-keycloak-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
  namespace: dvloper
spec:
  selector:
    app: postgres-keycloak
  ports:
    - port: 5432
      targetPort: 5432
